# openmusic

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
music/: README.md
playlists/: README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  cargo_errors.txt  tauri.conf.json  test_souvlaki.rs  test_tray.rs
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  media_controls.rs
src/components/Dashboard/: HomeView.tsx  MusicCard.tsx
src/components/Harbour/: HarbourView.tsx
src/components/Player/: Lyrics.tsx  PlayerBar.tsx  PlayerView.tsx
src/components/Settings/: SettingsView.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/UI/: AboutModal.tsx  ConfirmationModal.tsx  ContextMenu.tsx  Cyberdeck.tsx  ThemedSlider.tsx  TitleBar.tsx  Toast.tsx
src/hooks/: useAudioPlayer.ts  useDisplayData.ts  useLibrary.ts  useMediaControls.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: helpers.ts  tauriApi.ts
