[package]
name = "mewsic"
version = "0.6.9"
description = "Mewsic — A modern offline music player"
authors = ["xeoniii <https://github.com/xeoniii>"]
license = "GPL-3.0-only"
repository = "https://github.com/xeoniii/Mewsic"
edition = "2021"
rust-version = "1.70"



[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
lofty = "0.18"
base64 = "0.21"
rustc-hash = "1.1"
tauri-plugin-localhost = "2"
url = "2.5.8"
percent-encoding = "2.3.2"
tiny_http = "0.12.0"
image = "0.24"
rayon = "1.8"
discord-rich-presence = "0.2.4"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.11", features = ["json", "cookies"] }
urlencoding = "2.1"
regex = "1.10"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
souvlaki = { version = "0.8", default-features = false, features = ["use_zbus"] }
raw-window-handle = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
